--- a/examples/05---hashmap/Makefile
+++ b/examples/05---hashmap/Makefile
@@ -15,7 +15,7 @@ OBJ=
 endif
 CFLAGS+= -DCOMPTAG=$(COMPTAG)
 
-all: ${TARGET}.exe${OBJ} mmsql.exe${OBJ}
+all: ${TARGET}.exe${OBJ} mmsql.exe${OBJ} cmk-inventory.exe${OBJ}
 
 %.do: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
@@ -29,6 +29,8 @@ all: ${TARGET}.exe${OBJ} mmsql.exe${OBJ}
 ${TARGET}.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_csv.${OBJ}o
 
 mmsql.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_mysql.${OBJ}o m_csv.${OBJ}o  -lmysqlclient
+
+cmk-inventory.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_mysql.${OBJ}o m_csv.${OBJ}o  -lmysqlclient
 
 clean:
 	-${RM} *.o *.do *~ ${TARGET} ${TARGET}.d mmsql.d
