--- a/examples/05---hashmap/Makefile
+++ b/examples/05---hashmap/Makefile
@@ -15,7 +15,7 @@ OBJ=
 endif
 CFLAGS+= -DCOMPTAG=$(COMPTAG)
 
-all: ${TARGET}.exe${OBJ} mmsql.exe${OBJ} cmk-inventory.exe${OBJ} glob-match.exe${OBJ}
+all: ${TARGET}.exe${OBJ} mmsql.exe${OBJ} cmk-inventory.exe${OBJ} ansible-backup-tables.exe${OBJ}
 
 %.do: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
@@ -31,6 +31,8 @@ ${TARGET}.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_csv.${OBJ}o
 mmsql.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_mysql.${OBJ}o m_csv.${OBJ}o  -lmysqlclient
 
 cmk-inventory.exe${OBJ}: mls.${OBJ}o m_tool.${OBJ}o m_mysql.${OBJ}o m_csv.${OBJ}o  -lmysqlclient
+
+ansible-backup-tables.exe${OBJ}:  mls.${OBJ}o m_tool.${OBJ}o
 
 clean:
 	-${RM} *.o *.do *~ *.exe *.exed
